@@ -184,6 +184,45 @@ And here is API info about the RSync class.
 .. autoclass:: RSync
     :members: add_target,send
 
+gevent, eventlet and threading models
+===========================================
+
+.. versionadded: 1.2
+
+execnet supports "thread", "eventlet" and "gevent" as thread models
+on each of the two sides.  You need to decide which model to use 
+before you create any gateways::
+
+    # content of threadmodel.py
+    import execnet
+    # locally use "eventlet", remotely use "thread" model
+    execnet.set_execmodel("eventlet", "thread")
+    gw = execnet.makegateway()
+    print (gw.remote_status())
+    print (gw.remote_exec("channel.send(1)").receive())
+
+If you have eventlet installed in your environment you can execute this
+little test file::
+
+    $ python threadmodel.py
+    <RInfo 'numchannels=0, numexecuting=0, execmodel=thread'>
+    1
+
+.. note:: 
+
+    With python3 you can (as of December 2013) only use the thread model
+    because neither eventlet-0.14.0 nor gevent-1.0 support Python3.
+    When they start to support Python3, execnet will probably just work
+    because it is itself Python3 compatible.
+
+How to execute in the main thread
+------------------------------------------------
+
+When the remote side of a gateway uses the 'thread' model, execution
+will preferably run in the main thread.  This allows GUI loops
+or other code to behave correctly.  If you, however, start multiple
+executions concurrently, they will run in non-main threads.
+
 
 Debugging execnet
 ===============================================================
