@@ -3,7 +3,7 @@ execnet: pure python lib for connecting to local and remote Python Interpreters.
 
 (c) 2012, Holger Krekel and others
 """
-__version__ = '1.1.1'
+__version__ = '1.2.0.dev1'
 
 import execnet.apipkg
 
@@ -12,6 +12,7 @@ execnet.apipkg.initpkg(__name__, {
     'SocketGateway':    '.deprecated:SocketGateway',
     'SshGateway':       '.deprecated:SshGateway',
     'makegateway':      '.multi:makegateway',
+    'set_execmodel':    '.multi:set_execmodel',
     'HostNotFound':     '.gateway_bootstrap:HostNotFound',
     'RemoteError':      '.gateway_base:RemoteError',
     'TimeoutError':     '.gateway_base:TimeoutError',
