@@ -1,5 +1,5 @@
 """
-execnet: rapid multi-Python deployment
+execnet: distributed Python deployment and communication
 ========================================================
 
 .. _execnet: http://codespeak.net/execnet
@@ -8,9 +8,9 @@ execnet_ provides carefully tested means to ad-hoc interact with Python
 interpreters across version, platform and network barriers.  It provides
 a minimal and fast API targetting the following uses:
 
-* distribute tasks to local or remote CPUs
+* distribute tasks to local or remote processes
 * write and deploy hybrid multi-process applications
-* write scripts to administer a bunch of exec environments
+* write scripts to administer multiple hosts
 
 Features
 ------------------
@@ -24,10 +24,14 @@ Features
 
 * grouped creation and robust termination of processes
 
-* well tested between CPython 2.6-3.X, Jython 2.5.1 and PyPy 1.1
+* well tested between CPython 2.6-3.X, Jython 2.5.1 and PyPy 2.2
   interpreters.
 
-* fully interoperable between Windows and Unix-ish systems.
+* interoperable between Windows and Unix-ish systems.
+
+* integrates with different threading models, including standard
+  os threads, eventlet and gevent based systems.
+
 """
 
 try:
@@ -40,7 +44,7 @@ def main():
         name='execnet',
         description='execnet: rapid multi-Python deployment',
         long_description = __doc__,
-        version='1.1.1dev6',
+        version='1.2.0.dev1',
         url='http://codespeak.net/execnet',
         license='MIT',
         platforms=['unix', 'linux', 'osx', 'cygwin', 'win32'],
